# part12-containers-applications

phonebook-app/: README.md  compose.dev.yml  compose.yml  nginx.conf  nginx.dev.conf
phonebook-app/phonebook-backend/: .dockerignore  Cargo.toml  Dockerfile  bacon.toml  compose.dev.yml  compose.yml  dev.Dockerfile  migrations.Dockerfile
phonebook-app/phonebook-backend/migrations/: 20250203074249_init.sql  20250203081016_add_persons.sql
phonebook-app/phonebook-backend/src/: main.rs
phonebook-app/phonebook-frontend/: .dockerignore  Cargo.toml  Dockerfile  compose.dev.yml  compose.yml  dev.Dockerfile  index.html  styles.css
phonebook-app/phonebook-frontend/src/: app.rs  main.rs  model.rs  util.rs
phonebook-app/phonebook-frontend/src/components/: filter.rs  mod.rs  notification.rs  person_form.rs  persons.rs
phonebook-app/phonebook-frontend/src/services/: persons.rs
script-answers/: exercise12_11.txt  exercise12_2.txt  exercise12_3.txt  exercise12_4.txt  exercise12_8.txt
todo-app/: docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx.dev.conf
todo-app/todo-backend/: .dockerignore  Dockerfile  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml
todo-app/todo-backend/routes/: statistics.js  todos.js
todo-app/todo-backend/util/: config.js
todo-app/todo-frontend/: .dockerignore  Dockerfile  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml
