[package]
name = "phonebook-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
dotenv = "0.15.0"
futures = "0.3.31"
leptos = { version = "0.7.5", features = ["csr"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
