[package]
name = "phonebook-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
futures = "0.3"
gloo-utils = "0.2"
leptos = { version = "0.7.5", features = ["csr"] }
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window'] }
